dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Software_Automation__c.field-meta.xml
<CustomField>
    <fullName>Software_Automation__c</fullName>
    <description>What software used cross the practice of Automation? e.g None, AutoEntry, ReceiptBank, Hubdoc, etc   [up to 50 characters]</description>
    <inlineHelpText>What software used cross the practice of Automation?  None, AutoEntry, ReceiptBank, Hubdoc, etc   [up to 50 characters]</inlineHelpText>
    <label>Automation (Other)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>