dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Software_Automation_Stop_Manual__c.field-meta.xml
<CustomField>
    <fullName>Software_Automation_Stop_Manual__c</fullName>
    <description>If you do not use automation what would stop you from automating manual data entry?   [up to 50 characters]</description>
    <inlineHelpText>If you do not use automation what would stop you from automating manual data entry?  [up to 50 characters]</inlineHelpText>
    <label>What&apos;d stop you from automating?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>