dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Software_Client_Management__c.field-meta.xml
<CustomField>
    <fullName>Software_Client_Management__c</fullName>
    <description>What software used across the practice of Client Management? e.g. Xero, Quickbooks, Excel   [up to 50 characters]</description>
    <inlineHelpText>What software used across the practice of Client Management? e.g. Xero, Quickbooks, Excel   [up to 50 characters]</inlineHelpText>
    <label>Client Management(Other)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>