dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Software_Collaborative_and_DIY_BK__c.field-meta.xml
<CustomField>
    <fullName>Software_Collaborative_and_DIY_BK__c</fullName>
    <description>What software used cross the practice of Collaborative &amp; DIY BK (if the client will do some or all of the processing what do you recommend)? e.g Sage CM, SBC PE, Xero, QBO, Excel, Other  [up to 50 characters]</description>
    <inlineHelpText>What software used cross the practice of Collaborative &amp; DIY BK (if the client will do some or all of the processing what do you recommend)?e.g Sage CM, SBC PE, Xero, QBO, Excel, Other  [up to 50 characters]</inlineHelpText>
    <label>Collaborative &amp; DIY BK(Other)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>