dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Software_Employee_Benefits_Provider__c.field-meta.xml
<CustomField>
    <fullName>Software_Employee_Benefits_Provider__c</fullName>
    <description>What software used across the practice of Employee Benefits Provider? e.g. None, Other   [up to 50 characters]</description>
    <inlineHelpText>What software used across the practice of Employee Benefits Provider? e.g. None, Other   [up to 50 characters]</inlineHelpText>
    <label>Employee Benefits Provider(Other)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>