dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Software_Forcasting__c.field-meta.xml
<CustomField>
    <fullName>Software_Forcasting__c</fullName>
    <description>What software used across the practice of Forecasting? e.g. Excel, Castaway, Sage, Float, Fluidy, Don’t do it   [up to 50 characters]</description>
    <inlineHelpText>What software used across the practice of Forecasting? e.g. Excel, Castaway, Sage, Float, Fluidy, Don’t do it   [up to 50 characters]</inlineHelpText>
    <label>Forcasting(Other)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>