dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Software_HR__c.field-meta.xml
<CustomField>
    <fullName>Software_HR__c</fullName>
    <description>What software used across the practice of Human Resources? e.g. None, ExceL, Other   [up to 50 characters]</description>
    <inlineHelpText>What software used across the practice of Human Resources? e.g. None, ExceL, Other   [up to 50 characters]</inlineHelpText>
    <label>HR Software(Other)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>