dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Software_Internal_BK__c.field-meta.xml
<CustomField>
    <fullName>Software_Internal_BK__c</fullName>
    <description>What software used across the practice of Internal BK(if you do all the process what do you prefer to use)?  [up to 50 characters]</description>
    <inlineHelpText>What software used across the practice of Internal BK(if you do all the process what do you prefer to use)?  [up to 50 characters]</inlineHelpText>
    <label>Internal BK(Other)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>