dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Software_Payroll_Bureau__c.field-meta.xml
<CustomField>
    <fullName>Software_Payroll_Bureau__c</fullName>
    <description>What software used cross the practice of Payroll Bureau? e.g Sage Payroll Bureau, Star, Moneysoft, Brightpay   [up to 50 characters]</description>
    <inlineHelpText>What software used cross the practice of Payroll Bureau? e.g Sage Payroll Bureau, Star, Moneysoft, Brightpay   [up to 50 characters]</inlineHelpText>
    <label>Payroll Bureau(Other)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>