dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Software_Personal_Tax__c.field-meta.xml
<CustomField>
    <fullName>Software_Personal_Tax__c</fullName>
    <description>What software used across the practice of Personal Tax? e.g. Sage, Digita, BTC, PTP, CCH, FreeAgent, IRIS, Capium, Taxfiler, TaxCalc, HMRC, Xero. [up to 50 characters]</description>
    <inlineHelpText>What software used across the practice of Personal Tax? e.g. Sage, Digita, BTC, PTP, CCH, FreeAgent, IRIS, Capium, Taxfiler, TaxCalc, HMRC, Xero [up to 50 characters]</inlineHelpText>
    <label>Personal Tax(Other)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>