dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Software_Practice_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Software_Practice_Accounts__c</fullName>
    <description>What software used across the practice of Your own practice accounts? e.g. Sage50, SBC, Xero, QB, Other please state   [up to 50 characters]</description>
    <inlineHelpText>What software used across the practice of Your own practice accounts? e.g. Sage50, SBC, Xero, QB, Other please state   [up to 50 characters]</inlineHelpText>
    <label>Practice Accounts(Other)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>