dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Software_Practice_Management__c.field-meta.xml
<CustomField>
    <fullName>Software_Practice_Management__c</fullName>
    <description>What software used across the practice of Practice Management (Time &amp; fees, approval)? e.g. Sage, Digita, BTC, PTP, CCH, FreeAgent, IRIS, Capium, Taxfiler, TaxCalc, HMRC, Xero, other (please state)   [up to 50 characters]</description>
    <inlineHelpText>What software used across the practice of Practice Management (Time &amp; fees, approval)? e.g. Sage, Digita, BTC, PTP, CCH, FreeAgent, IRIS, Capium, Taxfiler, TaxCalc, HMRC, Xero, other (please state)   [up to 50 characters]</inlineHelpText>
    <label>Practice Management(Other)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>