dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Staff_Expense_Management__c.field-meta.xml
<CustomField>
    <fullName>Staff_Expense_Management__c</fullName>
    <description>What system do you use for staff expense management?   [up to 50 characters]</description>
    <inlineHelpText>What system do you use for staff expense management?   [up to 50 characters]</inlineHelpText>
    <label>Staff Expense Management</label>
    <length>50</length>
    <type>Text</type>
</CustomField>