dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/SW_Automation__c.field-meta.xml
<CustomField>
    <fullName>SW_Automation__c</fullName>
    <description>What software used cross the practice of Automation?  [select one of dropdown values]</description>
    <inlineHelpText>What software used cross the practice of Automation?  [select one of dropdown values]</inlineHelpText>
    <label>Automation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AutoEntry</fullName>
            </value>
            <value>
                <fullName>Hubdoc</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Other (please state)</label>
            </value>
            <value>
                <fullName>ReceiptBank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>