dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/SW_Collaborative_and_DIY_BK__c.field-meta.xml
<CustomField>
    <fullName>SW_Collaborative_and_DIY_BK__c</fullName>
    <description>What software used cross the practice of Collaborative &amp; DIY BK (if the client will do some or all of the processing what do you recommend)? [select one of dropdown values]</description>
    <inlineHelpText>What software used cross the practice of Collaborative &amp; DIY BK (if the client will do some or all of the processing what do you recommend)? [select one of dropdown values]</inlineHelpText>
    <label>Collaborative and DIY BK</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excel</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Other (please state)</label>
            </value>
            <value>
                <fullName>QBO</fullName>
            </value>
            <value>
                <fullName>SageCM</fullName>
                <label>Sage CM</label>
            </value>
            <value>
                <fullName>SBCPE</fullName>
                <label>SBC PE</label>
            </value>
            <value>
                <fullName>Xero</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>