dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/SW_Employee_Benefits_Provider__c.field-meta.xml
<CustomField>
    <fullName>SW_Employee_Benefits_Provider__c</fullName>
    <description>What software used across the practice of Employee Benefits Provider? [select one of dropdown values]</description>
    <inlineHelpText>What software used across the practice of Employee Benefits Provider? [select one of dropdown values]</inlineHelpText>
    <label>Employee Benefits Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Other (please state)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>