dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/SW_Forcasting__c.field-meta.xml
<CustomField>
    <fullName>SW_Forcasting__c</fullName>
    <description>What software used across the practice of Forecasting? [select one of dropdown values]</description>
    <inlineHelpText>What software used across the practice of Forecasting? [select one of dropdown values]</inlineHelpText>
    <label>Forcasting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Castaway</fullName>
            </value>
            <value>
                <fullName>Excel</fullName>
            </value>
            <value>
                <fullName>Float</fullName>
            </value>
            <value>
                <fullName>Fluidy</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Other (please state)</label>
            </value>
            <value>
                <fullName>Sage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>