dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/SW_HR__c.field-meta.xml
<CustomField>
    <fullName>SW_HR__c</fullName>
    <description>What software used across the practice of Human Resources? [select one of dropdown values]</description>
    <inlineHelpText>What software used across the practice of Human Resources? [select one of dropdown values]</inlineHelpText>
    <label>HR Software</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excel</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Other (please state)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>