dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/SW_Internal_BK__c.field-meta.xml
<CustomField>
    <fullName>SW_Internal_BK__c</fullName>
    <description>What software used across the practice of Internal BK(if you do all the process what do you prefer to use)?[select one of dropdown values]</description>
    <inlineHelpText>What software used across the practice of Internal BK(if you do all the process what do you prefer to use)?[select one of dropdown values]</inlineHelpText>
    <label>Internal BK</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excel</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Other (please state)</label>
            </value>
            <value>
                <fullName>QBO</fullName>
            </value>
            <value>
                <fullName>Sage CM</fullName>
            </value>
            <value>
                <fullName>SBC PE</fullName>
            </value>
            <value>
                <fullName>Xero</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>