dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/SW_Payroll_Bureau__c.field-meta.xml
<CustomField>
    <fullName>SW_Payroll_Bureau__c</fullName>
    <description>What software used cross the practice of Payroll Bureau? [select one of dropdown values]</description>
    <inlineHelpText>What software used cross the practice of Payroll Bureau? [select one of dropdown values]</inlineHelpText>
    <label>Payroll Bureau</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brightpay</fullName>
            </value>
            <value>
                <fullName>Moneysoft</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Other (please state)</label>
            </value>
            <value>
                <fullName>SagePayrollBureau</fullName>
                <label>Sage Payroll Bureau</label>
            </value>
            <value>
                <fullName>Star</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>