dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/SW_Practice_Accounts__c.field-meta.xml
<CustomField>
    <fullName>SW_Practice_Accounts__c</fullName>
    <description>What software used across the practice of Your own practice accounts? [select one of dropdown values]</description>
    <inlineHelpText>What software used across the practice of Your own practice accounts? [select one of dropdown values]</inlineHelpText>
    <label>Your own practice accounts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
                <label>Other (please state)</label>
            </value>
            <value>
                <fullName>QB</fullName>
            </value>
            <value>
                <fullName>Sage50</fullName>
            </value>
            <value>
                <fullName>SBC</fullName>
            </value>
            <value>
                <fullName>Xero</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>