dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/SW_Practice_Management__c.field-meta.xml
<CustomField>
    <fullName>SW_Practice_Management__c</fullName>
    <description>What software used across the practice of Practice Management (Time &amp; fees, approval)? [select one of dropdown values]</description>
    <inlineHelpText>What software used across the practice of Practice Management (Time &amp; fees, approval)? [select one of dropdown values]</inlineHelpText>
    <label>Practice management (Time&amp;fees,approval)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BTC</fullName>
            </value>
            <value>
                <fullName>Capium</fullName>
            </value>
            <value>
                <fullName>CCH</fullName>
            </value>
            <value>
                <fullName>Digita</fullName>
            </value>
            <value>
                <fullName>FreeAgent</fullName>
            </value>
            <value>
                <fullName>HMRC</fullName>
            </value>
            <value>
                <fullName>IRIS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Other (please state)</label>
            </value>
            <value>
                <fullName>PTP</fullName>
            </value>
            <value>
                <fullName>Sage</fullName>
            </value>
            <value>
                <fullName>TaxCalc</fullName>
            </value>
            <value>
                <fullName>Taxfiler</fullName>
            </value>
            <value>
                <fullName>Xero</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>