dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Team_Practice_Accounts_Prep__c.field-meta.xml
<CustomField>
    <fullName>Team_Practice_Accounts_Prep__c</fullName>
    <description>Tell me about the team at your practice on Accounts Prep.  [up to 50 characters]</description>
    <inlineHelpText>Tell me about the team at your practice on Accounts Prep.  [up to 50 characters]</inlineHelpText>
    <label>Accounts Prep</label>
    <length>50</length>
    <type>Text</type>
</CustomField>