dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Team_Practice_Personal_Tax__c.field-meta.xml
<CustomField>
    <fullName>Team_Practice_Personal_Tax__c</fullName>
    <description>Tell me about the team at your practice on Personal Tax.  [up to 50 characters]</description>
    <inlineHelpText>Tell me about the team at your practice on Personal Tax.  [up to 50 characters]</inlineHelpText>
    <label>Personal Tax</label>
    <length>50</length>
    <type>Text</type>
</CustomField>