dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Team_Roles_Accounts_Prep__c.field-meta.xml
<CustomField>
    <fullName>Team_Roles_Accounts_Prep__c</fullName>
    <description>Tell me about the team: the number of roles on Accounts Prep.  [up to 5 digits]</description>
    <inlineHelpText>Tell me about the team: the number of roles on Accounts Prep. [up to 5 digits]</inlineHelpText>
    <label>Number of Roles-Accounts Prep</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>