dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/fields/Team_Roles_Personal_Tax__c.field-meta.xml
<CustomField>
    <fullName>Team_Roles_Personal_Tax__c</fullName>
    <description>Tell me about the team: the number of roles on Personal Tax. [up to 5 digits]</description>
    <inlineHelpText>Tell me about the team: the number of roles on Personal Tax. [up to 5 digits]</inlineHelpText>
    <label>Number of Roles - Personal Tax</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>