dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/validationRules/Bank_Feeds_Capacity.validationRule-meta.xml
<ValidationRule>
    <fullName>Bank_Feeds_Capacity</fullName>
    <active>true</active>
    <description>Percentage must be between 0 and 100%.</description>
    <errorConditionFormula>OR( Bank_Feeds_Capacity__c &gt; 1.0,
Bank_Feeds_Capacity__c  &lt; 0.0
)</errorConditionFormula>
    <errorDisplayField>Bank_Feeds_Capacity__c</errorDisplayField>
    <errorMessage>Percentage of Clients must be between 0 and 100%.</errorMessage>
</ValidationRule>