dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/validationRules/BankFeeds_Percentage_Clients.validationRule-meta.xml
<ValidationRule>
    <fullName>BankFeeds_Percentage_Clients</fullName>
    <active>true</active>
    <description>Percentage must be between 0 and 100%.</description>
    <errorConditionFormula>OR( BankFeeds_Percentage_Clients__c &gt; 1.0,
BankFeeds_Percentage_Clients__c  &lt; 0.0
)</errorConditionFormula>
    <errorDisplayField>BankFeeds_Percentage_Clients__c</errorDisplayField>
    <errorMessage>If Yes is selected, what percentage? must be between 0 and 100%.</errorMessage>
</ValidationRule>