dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/validationRules/Payroll_Bureau_Service_Online.validationRule-meta.xml
<ValidationRule>
    <fullName>Payroll_Bureau_Service_Online</fullName>
    <active>true</active>
    <description>Percentage must be between 0 and 100%.</description>
    <errorConditionFormula>OR( Payroll_Bureau_Service_Online__c  &gt; 1.0,
Payroll_Bureau_Service_Online__c  &lt; 0.0
)</errorConditionFormula>
    <errorDisplayField>Payroll_Bureau_Service_Online__c</errorDisplayField>
    <errorMessage>Percentage of Service Online must be between 0 and 100%.</errorMessage>
</ValidationRule>