dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/validationRules/Payroll_Director.validationRule-meta.xml
<ValidationRule>
    <fullName>Payroll_Director</fullName>
    <active>true</active>
    <description>Percentage must be between 0 and 100%.</description>
    <errorConditionFormula>OR( Payroll_Director__c &gt; 1.0,
Payroll_Director__c  &lt; 0.0
)</errorConditionFormula>
    <errorDisplayField>Payroll_Director__c</errorDisplayField>
    <errorMessage>Percentage are director must be between 0 and 100%.</errorMessage>
</ValidationRule>