dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/validationRules/Payroll_Distribute_Info_3rd_Party.validationRule-meta.xml
<ValidationRule>
    <fullName>Payroll_Distribute_Info_3rd_Party</fullName>
    <active>true</active>
    <description>Percentage must be between 0 and 100%.</description>
    <errorConditionFormula>OR(  Payroll_Distribute_Info_3rd_Party__c &gt; 1.0,
Payroll_Distribute_Info_3rd_Party__c  &lt; 0.0
)</errorConditionFormula>
    <errorDisplayField>Payroll_Distribute_Info_3rd_Party__c</errorDisplayField>
    <errorMessage>3rd Party Percentage must be between 0 and 100%.</errorMessage>
</ValidationRule>