dxscale/sales/practiceEfficiencyReview/objects/Practice_Efficiency_Review__c/validationRules/Payroll_Distribute_Info_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Payroll_Distribute_Info_Email</fullName>
    <active>true</active>
    <description>Percentage must be between 0 and 100%.</description>
    <errorConditionFormula>OR( Payroll_Distribute_Info_Email__c &gt; 1.0,
Payroll_Distribute_Info_Email__c  &lt; 0.0
)</errorConditionFormula>
    <errorDisplayField>Payroll_Distribute_Info_Email__c</errorDisplayField>
    <errorMessage>Email Percentage must be between 0 and 100%.</errorMessage>
</ValidationRule>